--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,12 +7,17 @@ header {
   align-items: center;
 
   width: 100%;
-  height: fit-content;
+  height: 100px;
 
   padding: 0 20px;
   z-index: 100;
 
   background-color: white;
+}
+
+header.scroll {
+  box-shadow: 0 0 10px grey;
+  height: 80px;
 }
 
 .header-container {
@@ -22,7 +27,6 @@ header {
 
   max-width: 1200px;
   width: 100%;
-  height: 100px;
 }
 
 .header-logo {
