--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,17 +7,26 @@ header {
   align-items: center;
 
   width: 100%;
-  height: 100px;
+  height: 80px;
 
   padding: 0 20px;
   z-index: 100;
 
   background-color: white;
+  transition: 0.5s;
 }
 
 header.scroll {
-  box-shadow: 0 0 10px grey;
+  /* box-shadow: 0 0 10px grey; */
   height: 80px;
+  background-color: rgb(59, 59, 59);
+  color: white;
+}
+
+header.scroll .nav-link,
+header.scroll .header-logo,
+header.scroll .fa-bars {
+  color: white;
 }
 
 .header-container {
@@ -50,9 +59,11 @@ header nav ul {
   cursor: pointer;
   display: none;
   color: #313031ff;
+  display: none;
 }
 
 .fa-xmark {
+  display: none;
   font-size: 25px;
   cursor: pointer;
   color: white;
@@ -69,6 +80,10 @@ header nav ul {
     display: block;
     position: relative;
     z-index: 101;
+  }
+
+  .fa-xmark {
+    display: block;
   }
 
   header nav {
