--- a/src/index.css
+++ b/src/index.css
@@ -554,7 +554,7 @@ section {
   width: 100%;
 
   margin-top: 30px;
-  gap: 20px;
+  gap: 30px;
 }
 
 .project-item {
@@ -565,15 +565,23 @@ section {
   align-items: baseline;
   gap: 20px;
 
-  padding: 15px;
+  padding: 20px 15px;
   border-radius: 10px;
+
+  transition: 0.3s;
+}
+
+.project-item:hover {
+  transform: scale(1.1);
 }
 
 .project-item img {
   width: 100%;
   height: 200px;
   object-fit: cover;
+  object-position: top;
   border-radius: 10px;
+  border: 1px solid rgb(189, 189, 189);
 }
 
 .project-item .top-text {
